terraform/ecs-service.tf
resource "aws_ecs_service" "service" {

  name = "${var.project_name}-service"

  cluster = aws_ecs_cluster.cluster.id

  task_definition = aws_ecs_task_definition.task.arn

  desired_count = 1

  launch_type = "FARGATE"

  network_configuration {

    subnets = [

      aws_subnet.public1.id,

      aws_subnet.public2.id

    ]

    security_groups = [

      aws_security_group.ecs_sg.id

    ]

    assign_public_ip = true

  }

}
